landing page final

--- a/3_product_landing_page/index.html
+++ b/3_product_landing_page/index.html
@@ -19,20 +19,92 @@
         <nav id="nav-bar">
             <ul>
                 <li><a class="nav-link" href="#overview">Overview</a></li>
+                <li><a class="nav-link" href="#features">Features</a></li>
                 <li><a class="nav-link" href="#games">Games</a></li>
                 <li><a class="nav-link" href="#pricing">Pricing</a></li>
-                <li><a class="nav-link" href="#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
     <section id="overview">
-        <form action="">
-            <input id="email" type="email" placeholder="Enter your email" required />
-            <input type="submit" name="submit" id="submit" />
-        </form>
+        <!-- <img class="overview-image" src="./images/forza5.jpg" alt="" /> -->
+        <div class="overview-text">
+            <h1>Xbox Game Pass</h1>
+            <p class="pass-description">
+            Xbox Game Pass Ultimate includes Xbox Live Gold and
+             over 100 high-quality games.
+              Play games with friends on console and PC
+               and get an EA Play membership – all for one low monthly price.
+            </p>
+            <div class="overview-links">
+                <a href="#pricing"><h3>View Plans</h3></a>
+                <a href="#"><h3>Join Now</h3></a>
+            </div>
+            <p class="newsletter">
+            Subscribe to our newsletter to get notified about new games and updates on Xbox Game Pass.
+            </p>
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+                <input id="email" type="email" placeholder="  Enter your email" required />
+                <input type="submit" name="submit" id="submit" value="Get Started"/>
+            </form>
+        </div> 
     </section>
-    <section id="games"></section>
-    <section id="pricing"></section>
-    <section id="faq"></section>
+    <section id="features">
+        <!-- <img class="console-img" src="./images/xbox_console.png" alt=""> -->
+        <div>
+            <h3 class="features-contents">Xbox Live Gold included</h3>
+            <h3 class="features-contents">EA Play membership included</h3>
+            <h3 class="features-contents">Play directly on console and PC</h3>
+            <h3 class="features-contents">Download console and PC games</h3>
+            <h3 class="features-contents">Free Perks and exclusive member discounts</h3>
+            <h3 class="features-contents">New games added all the time, including day one releases</h3>
+        </div>
+    </section>
+    <section id="games">
+        <iframe id="video" src="https://www.youtube.com/embed/ps2P8SpDnl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+    <section id="pricing">
+        <div class="pricing-contents">
+            <h3>ULTIMATE</h3>
+            <h4>Get your first month for Rs. 50,<br> then <strong>RS. 699/month</strong></h4>
+            <h3><a href="#"><strong>Join For RS. 50</strong></a></h3>
+            <ul>
+                <li>Play over 100 high-quality games on console and PC</li>
+                <li>New games added all the time</li>
+                <li>Xbox Game Studios titles the same day as release</li>
+                <li>Exclusive member discounts and deals</li>
+                <li>Free Perks including in-game content and partner offers</li>
+            </ul>
+            <h3><strong>ALSO INCLUDES:</strong></h3>
+            <h3><strong>GOLD</strong><br><strong>EA Play</strong></h3>
+        </div>
+        <div class="pricing-contents">
+            <h3>PC</h3>
+            <h4>Get your first month for Rs. 50,<br>
+                then <strong>RS. 489/month</strong></h4>
+            <h3><a href="#"><strong>Join For RS. 50</strong></a></h3>
+            <ul>
+                <li>Play over 100 high-quality games on console and PC</li>
+                <li>New games added all the time</li>
+                <li>Xbox Game Studios titles the same day as release</li>
+                <li>Free Perks including in-game content and partner offers</li>
+            </ul>
+            <h3><strong>ALSO INCLUDES:</strong></h3>
+            <h3><strong>EA Play</strong></h3>
+        </div>
+        <div class="pricing-contents">
+            <h3>CONSOLE</h3>
+            <h4><strong>RS. 699/month</strong></h4>
+            <h3><a href="#"><strong>Join Now</strong></a></h3>
+            <ul>
+                <li>Play over 100 high-quality games on console and PC</li>
+                <li>New games added all the time</li>
+                <li>Xbox Game Studios titles the same day as release</li>
+                <li>Free Perks including in-game content and partner offers</li>
+            </ul>
+    </section>
+    <footer>
+        <h4>The above contents are just used for practicing HTML\CSS.<br>
+            I am not trying to imitate microsoft.</h4>
+    </footer>
 </body>
 </html>
