--- a/3_product_landing_page/index.html
+++ b/3_product_landing_page/index.html
@@ -11,11 +11,6 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <header id="header">
         <img id="header-img" src="./images/microsoft_logo.png" alt="">
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
         <nav id="nav-bar">
             <ul>
                 <li><a class="nav-link" href="#overview">Overview</a></li>
@@ -43,7 +38,7 @@
             Subscribe to our newsletter to get notified about new games and updates on Xbox Game Pass.
             </p>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
-                <input id="email" type="email" placeholder="  Enter your email" required />
+                <input id="email" name="email" type="email" placeholder="  Enter your email" required />
                 <input type="submit" name="submit" id="submit" value="Get Started"/>
             </form>
         </div> 
@@ -93,7 +88,7 @@
         </div>
         <div class="pricing-contents">
             <h3>CONSOLE</h3>
-            <h4><strong>RS. 699/month</strong></h4>
+            <h4>Get your first month for Rs. 50,<br>then<strong>RS. 699/month</strong></h4>
             <h3><a href="#"><strong>Join Now</strong></a></h3>
             <ul>
                 <li>Play over 100 high-quality games on console and PC</li>
