--- a/3_product_landing_page/index.html
+++ b/3_product_landing_page/index.html
@@ -55,7 +55,8 @@
         </div>
     </section>
     <section id="games">
-        <iframe id="video" src="https://www.youtube.com/embed/ps2P8SpDnl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video" width="1647" height="858" src="https://www.youtube.com/embed/ps2P8SpDnl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe  src="https://www.youtube.com/embed/ps2P8SpDnl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
     </section>
     <section id="pricing">
         <div class="pricing-contents">
