--- a/5_portfolio/index.html
+++ b/5_portfolio/index.html
@@ -26,19 +26,43 @@
         <h2> a Front-end Web Developer</h2>
     </section>
     <section id="projects">
-        <div class="project-tile">
-            <a href="#">
-                <img src="./images/tribute_page.png" alt="">
-            </a>
+        <h2>My Projects</h2>
+        <div class="project-area">
+            <div class="project-tile">
+                <a href="#">
+                    <img src="./images/tribute_page.png" alt="">
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="#">
+                    <img src="./images/form.png" alt="">
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="#">
+                    <img src="./images/landing_page.png" alt="">
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="#">
+                    <img src="./images/RPC.png" alt="">
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="#">
+                    <img src="./images/documentation.png" alt="">
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="#">
+                    <img src="./images/glass_website.png" alt="">
+                </a>
+            </div>
         </div>
-        <div class="project-tile"></div>
-        <div class="project-tile"></div>
-        <div class="project-tile"></div>
-        <div class="project-tile"></div>
-        <div class="project-tile"></div>
+        
     </section>
     <section id="contact">
-
+        <a href="https://github.com/SavageSparky" target="blank"><h3>Github</h3></a>
     </section>
 </body>
 </html>
