--- a/5_portfolio/index.html
+++ b/5_portfolio/index.html
@@ -62,7 +62,7 @@
         
     </section>
     <section id="contact">
-        <a href="https://github.com/SavageSparky" target="blank"><h3>Github</h3></a>
+        <a id="profile-link" href="https://github.com/SavageSparky" target="blank"><h3>Github</h3></a>
     </section>
 </body>
 </html>
