--- a/5_portfolio/index.html
+++ b/5_portfolio/index.html
@@ -31,38 +31,47 @@
             <div class="project-tile">
                 <a href="#">
                     <img src="./images/tribute_page.png" alt="">
+                    <div class="overlay"><h3>Tribute Page</h3></div>
                 </a>
             </div>
             <div class="project-tile">
                 <a href="#">
                     <img src="./images/form.png" alt="">
+                    <div class="overlay"><h3>Survey Form</h3></div>
                 </a>
             </div>
             <div class="project-tile">
                 <a href="#">
                     <img src="./images/landing_page.png" alt="">
+                    <div class="overlay"><h3>Landing Page</h3></div>
                 </a>
             </div>
             <div class="project-tile">
                 <a href="#">
                     <img src="./images/RPC.png" alt="">
+                    <div class="overlay"><h3>Rock Paper Scissors</h3></div>
                 </a>
             </div>
             <div class="project-tile">
                 <a href="#">
                     <img src="./images/documentation.png" alt="">
+                    <div class="overlay"><h3>Solidity Documentation</h3></div>
                 </a>
             </div>
             <div class="project-tile">
                 <a href="#">
                     <img src="./images/glass_website.png" alt="">
+                    <div class="overlay"><h3>Glass Website</h3></div>
                 </a>
             </div>
         </div>
         
     </section>
     <section id="contact">
-        <a id="profile-link" href="https://github.com/SavageSparky" target="blank"><h3>Github</h3></a>
+        <a id="profile-link" href="https://github.com/SavageSparky" target="_blank">
+            <img src="./images/github.png" alt="">
+            <h3>Github</h3>
+        </a>
     </section>
 </body>
 </html>
