--- a/5_portfolio/index.html
+++ b/5_portfolio/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/png" href="./images/portfolio.png">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Teko:wght@300&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/511ad4969e.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
     
