ham butto bug fixa

--- a/5_portfolio/index.html
+++ b/5_portfolio/index.html
@@ -24,7 +24,7 @@
                 <h2 id="project-title">
                     My Portfolio
                 </h2>
-                <div id="ham">
+                <div id="ham" class="close">
                     <i class="fas fa-bars fa-2x"></i>
                 </div>
             </div>
